--- a/css/unifaction-3col.css
+++ b/css/unifaction-3col.css
@@ -296,7 +296,6 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 .core-link>a { display:block; transition:0.1s ease-in-out; }
 .core-link>a:hover { background-color:#59aba9; width:155px; }
 .core-link>a:hover span { color:white !important; display:inline-block; }
-.core-link>a:visited { color:#475055; }
 
 .core-active { background-color:#59aba9; }
 .core-active span { color:white !important; }
@@ -526,6 +525,7 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 /**************************
 ****** Mobile Footer ******
 **************************/
+
 #mobile-footer { position:fixed; bottom:0px; left:0px; width:100%; background-color:white; height:50px; z-index:1000; overflow:hidden; border-top: solid 1px #c0c0c0; }
 
 #mn-list { display:inline-block; padding:0; margin:0; }
@@ -536,12 +536,34 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 .mn-link>a:visited { color:#475055; }
 .mn-link:hover { border-bottom:6px solid #16bab4; }
 
-/****************************
-****** Standard Footer ******
-****************************/
-#footer { position:absolute; bottom:0px; left:0px; width:100%; background-color:white; height:35px; z-index:0; border-top: solid 1px #c0c0c0; font-size:0.8em; text-align:center; }
-#footer a { color:#16b9b3; }
+/******************************
+****** UniFaction Footer ******
+******************************/
+
+/* Footer Bar */
+#footer { position:fixed; bottom:0px; left:0px; width:100%; background-color:white; height:35px; z-index:1000; overflow:hidden; border-top: solid 1px #c0c0c0; font-size:0.8em; text-align:center; }
+#footer>a { color:#16b9b3; line-height:35px; }
 #footer a:hover { color: #56ccc8; }
+
+/* Footer Display Panel - the section that footer displays get shown */
+#footer-panel { position:fixed; bottom:36px; right:0px; width:100%; z-index:1000; max-height:350px; }
+
+/* Footer Side-Bar Buttons */
+#footer-side-bar { position:absolute; bottom:0px; right:0px; height:35px; }
+
+.footer-display { position:fixed; display:none; height:280px; width:220px; bottom:36px; right:0px; background-color:#6BD3D1; border: solid 1px #1F6F6D; margin-left:8px; overflow:hidden; }
+
+.notif-slot { width:100%; height:50px; border-bottom: solid 1px #1F6F6D; overflow:hidden; }
+.notif-slot:hover { background-color:#7BD3D1; }
+.notif-entry>a { display:block; color:#1f6f6d !important; height:50px; padding:0 6px 0 6px; text-align:left; font-size:14px; line-height:24px; }
+
+.notif-more { width:100%; height:20px; text-align:right; }
+.notif-more-inner { padding:4px 6px 0 0; }
+.notif-more-inner>a { color:#1f6f6d !important; }
+
+.ftbutton { border-left: solid 1px #aaaaaa; }
+.ftbutton>a { display:inline-block; line-height:35px; font-size:20px; padding:0 6px 0 6px; }
+
 
 /**********************
 ****** Modal CSS ******
