--- a/css/unifaction-3col.css
+++ b/css/unifaction-3col.css
@@ -261,7 +261,7 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 
 #nav-active { font-weight:bold; border-bottom:6px solid #16bab4; }
 
-/* The Avatars */
+/* The Profile Pictures */
 #nav-user{ padding-left:8px; border-left:1px solid #d7d7d7; }
 #nav-propic { float:left; margin-top:5px; margin-right:8px; vertical-align:middle; }
 
@@ -280,11 +280,11 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 ****** Core Navigation ******
 ****************************/
 
-@media screen and (min-width:1121px) {
+@media screen and (min-width:1521px) {
 	#core-list { display:inline-block; width:155px; padding:0px; margin:0px; list-style-type:none; }
 	.core-txt { display:inline-block; position:absolute; left:60px; font-size:12px; color:#1f6f6d; }
 }
-@media screen and (max-width:1120px) {
+@media screen and (max-width:1521px) {
 	#core-list { display:inline-block; width:55px; padding:0px; margin:0px; list-style-type:none; }
 	.core-txt { display:none; font-size:12px; color:#1f6f6d; }
 }
@@ -338,18 +338,41 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 
 .searchSelActive { display:block; font-size:18px; line-height:28px; color:white; background-color:#ee6060; text-decoration:none; padding:2px; }
 
+/************************
+****** Page Layout ******
+************************/
+
+@media screen and (min-width:1401px) {
+	#content { margin-left:255px; max-width:100%; margin-right:260px; }
+}
+
+@media screen and (min-width:1121px) and (max-width:1400px) {
+	#content { margin-left:255px; margin-right:7px; }
+}
+
+@media screen and (min-width:501px) and (max-width:1120px) {
+	#content { margin-left:0px; margin-right:7px; }
+}
+
+@media screen and (max-width:500px) {
+	#content { margin-left:0px; }
+}
+
+#panel-nav { width:245px; }
+#viewport-wrap { max-width:1420px; position:relative; padding:0; }
+
 /***********************************************************
-****** Responsive - Large Desktop (Minimum of 1421px) ******
-************************************************************/ @media screen and (min-width:1421px) {
+****** Responsive - Large Desktop (Minimum of 1521px) ******
+************************************************************/ @media screen and (min-width:1521px) {
 
 /* Page Positioning */
-#content-wrap { margin-left:170px; overflow:hidden; }
-#viewport-wrap { max-width:1440px; margin:0 auto 0 auto; padding:0px; position:relative; }
+#content-wrap { margin-left:162px; overflow:hidden; }
+#viewport-wrap { margin:0 auto 0 auto; }
 
 /* Side Panel */
 #panel { float:left; margin-left:0px; }
 #panel-core { float:left; width:155px; position:relative; }
-#panel-right { position:absolute; right:10px; }
+#panel-right { position:absolute; right:7px; }
 #panel-right-inner { padding:10px; margin-right:10px; max-width:100%; }
 
 /* Mobile Navigation */
@@ -358,30 +381,29 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 
 }
 /****************************************************
-****** Responsive - Desktop (1121px to 1420px) ******
-****************************************************/ @media screen and (min-width:1121px) and (max-width:1420px) {
+****** Responsive - Desktop (1401px to 1520px) ******
+****************************************************/ @media screen and (min-width:1401px) and (max-width:1520px) {
 
 /* Page Positioning */
-#content-wrap { margin-left:170px; }
-#viewport-wrap { max-width:1440px; padding:0; position:relative; }
+#content-wrap { margin-left:62px; }
 
 /* Side Panel */
-#panel { float:left; margin-left:0px; }
-#panel-core { float:left; width:155px; position:relative; }
-#panel-right { display:none; }
+#panel { float:left; }
+#panel-core { float:left; width:55px; position:relative; }
+#panel-right { position:absolute; right:7px; }
+#panel-right-inner { padding:10px; margin-right:10px; max-width:100%; }
 
 /* Mobile Navigation */
 #mobile-footer { display:none; }
 .mobile-strict { display:none !important; }
 
-}
+} /* End of Responsive - Desktop */
 /***************************************************
-****** Responsive - Desktop (920px to 1120px) ******
-***************************************************/ @media screen and (min-width:921px) and (max-width:1120px) {
+****** Responsive - Desktop (1121px to 1400px) ******
+***************************************************/ @media screen and (min-width:1121px) and (max-width:1400px) {
 
 /* Page Positioning */
-#content-wrap { margin-left:70px; }
-#viewport-wrap { max-width:1120px; position:relative; padding:0; }
+#content-wrap { margin-left:62px; }
 
 /* Side Panel */
 #panel { float:left; }
@@ -394,12 +416,12 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 
 } /* End of Responsive - Desktop */
 /*************************************************
-****** Responsive - Tablet (501px to 920px) ******
-*************************************************/ @media screen and (min-width:501px) and (max-width:920px) {
+****** Responsive - Tablet (501px to 1120px) ******
+*************************************************/ @media screen and (min-width:501px) and (max-width:1120px) {
 
 /* Page Positioning */
-#content-wrap { margin-left:70px; }
-#viewport-wrap { margin:0 auto 0 auto; position:relative; padding:0; }
+#content-wrap { margin-left:62px; }
+#viewport-wrap { margin:0 auto 0 auto; }
 
 /* Side Panel */
 #panel { float:left; width:55px; }
@@ -423,7 +445,7 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 
 /* Page Positioning */
 #content-wrap { margin-left:0px; margin-top:0px; }
-#viewport-wrap { margin:0 auto 0 auto; position:relative; padding:0; }
+#viewport-wrap { margin:0 auto 0 auto; }
 
 /* Side Panel */
 #panel { float:left; width:0px; }
@@ -466,6 +488,7 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 #nav-list ul li a { color: #fff; padding:6px 20px 6px 25px; }
 #nav-list ul li a:hover { background: #59aba9; }
 
+
 /***********************
 ****** Left Panel ******
 ***********************/
@@ -506,9 +529,15 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 .nav-note a { display:block; color:#16b9b3 !important; padding:6px 16px 6px 16px; }
 .nav-note:hover a { color:#012345 !important; }
 
-/*************************
-****** Widget Panel ******
-*************************/
+/************************
+****** Right Panel ******
+************************/
+
+#panel-right { width:245px; }
+
+/****************************
+****** Widget Displays ******
+****************************/
 
 .widget-wrap { width:100%; padding-bottom:15px; }
 .widget-inner { background-color:white; border:solid 1px #cccccc; padding:10px; }
@@ -521,6 +550,7 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 
 .widget-line a { display:block; color:#16b9b3 !important; padding:4px 8px 4px 8px; overflow:hidden; }
 .widget-line:hover a { color:#012345 !important; }
+
 
 /**************************
 ****** Mobile Footer ******
@@ -535,6 +565,7 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 .mn-link>a { display:block; padding:0px 15px 0px 15px; text-decoration:none; color:#475055; }
 .mn-link>a:visited { color:#475055; }
 .mn-link:hover { border-bottom:6px solid #16bab4; }
+
 
 /******************************
 ****** UniFaction Footer ******
@@ -551,19 +582,56 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 /* Footer Side-Bar Buttons */
 #footer-side-bar { position:absolute; bottom:0px; right:0px; height:35px; }
 
-.footer-display { position:fixed; display:none; height:280px; width:220px; bottom:36px; right:0px; background-color:#6BD3D1; border: solid 1px #1F6F6D; margin-left:8px; overflow:hidden; }
+.footer-display { position:fixed; display:none; width:220px; bottom:36px; right:0px; background-color:#6BD3D1; border: solid 1px #1F6F6D; margin-left:8px; overflow:hidden; }
+
+.ftbutton { border-left: solid 1px #aaaaaa; }
+.ftbutton>a { display:inline-block; line-height:35px; font-size:20px; padding:0 6px 0 6px; }
+
+
+/***************************
+****** Friend Display ******
+***************************/
+
+.friend-slot { width:100%; height:50px; border-bottom: solid 1px #1F6F6D; overflow:hidden; }
+.friend-slot:hover { background-color:#7BD3D1; }
+.friend-entry { position:relative; }
+.friend-entry>a { color:#1f6f6d !important; font-size:16px; line-height:20px; overflow:hidden; }
+
+.friend-lside { position:absolute; left:4px; top:4px; }
+.friend-rside { position:absolute; left:54px; top:4px; }
+.friend-lside>img { height:42px; }
+
+
+/*******************************
+****** Navigation Display ******
+*******************************/
 
 .notif-slot { width:100%; height:50px; border-bottom: solid 1px #1F6F6D; overflow:hidden; }
 .notif-slot:hover { background-color:#7BD3D1; }
 .notif-entry>a { display:block; color:#1f6f6d !important; height:50px; padding:0 6px 0 6px; text-align:left; font-size:14px; line-height:24px; }
 
-.notif-more { width:100%; height:20px; text-align:right; }
-.notif-more-inner { padding:4px 6px 0 0; }
+.notif-more { width:100%; height:35px; text-align:right; }
+.notif-more-inner { padding:8px 6px 0 0; }
 .notif-more-inner>a { color:#1f6f6d !important; }
 
-.ftbutton { border-left: solid 1px #aaaaaa; }
-.ftbutton>a { display:inline-block; line-height:35px; font-size:20px; padding:0 6px 0 6px; }
 
+/*************************
+****** Chat Display ******
+*************************/
+
+.chat-header { border-bottom: solid 1px #1F6F6D; padding:4px; font-weight:bold; color:#1f6f6d !important; }
+.chat-inner { max-height:350px; overflow-y:auto; }
+
+.chat-slot { width:100%; border-bottom: solid 1px #1F6F6D; }
+.chat-slot:hover { background-color:#7BD3D1; }
+.chat-entry { position:relative; color:#1f6f6d !important; font-size:14px; line-height:14px; }
+
+.chat-lside { display:table-cell; vertical-align:top; padding:2px 2px 0px 2px; }
+.chat-rside { display:table-cell; vertical-align:top; padding:2px 2px 2px 4px; }
+.chat-lside>img { height:32px; }
+
+.chat-footer {  }
+.chat-footer input { width:100%; box-sizing:border-box; padding:3px; }
 
 /**********************
 ****** Modal CSS ******
