--- a/css/blog.css
+++ b/css/blog.css
@@ -24,7 +24,7 @@
 	#content { background-color:white; margin-left:0px; padding:10px; }
 }
 
-#panel-nav { width:245px; }
+#panel-left { width:245px; }
 
 
 /*************************
