--- a/css/microfaction.css
+++ b/css/microfaction.css
@@ -24,7 +24,7 @@
 	#content { margin-left:0px; padding:5px; }
 }
 
-#panel-nav { width:245px; }
+#panel-left { width:245px; }
 
 
 /********************************
