--- a/css/unifaction-base.css
+++ b/css/unifaction-base.css
@@ -445,7 +445,7 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 ****** Widget Displays ******
 ****************************/
 
-.widget-wrap { width:100%; padding-bottom:15px; }
+.widget-wrap { width:100%; padding-bottom:10px; }
 .widget-inner { background-color:white; border:solid 1px #cccccc; padding:10px; }
 .widget-title { font-weight:bold; font-size:1.1em; padding-bottom:2px; }
 
@@ -517,6 +517,13 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 	
 }
 
+/***********************************
+****** General Display Styles ******
+***********************************/
+
+.close-display { position:absolute; top:0px; right:0px; }
+.close-display>a { display:block; padding:4px; border:solid 1px #1F6F6D; color:gray !important; }
+
 /***************************
 ****** Friend Display ******
 ***************************/
@@ -548,19 +555,19 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 ****** Chat Display ******
 *************************/
 
-.chat-header { border-bottom: solid 1px #1F6F6D; padding:4px; font-weight:bold; color:#1f6f6d !important; }
-.chat-inner { max-height:350px; overflow-y:auto; }
+/* The widget uses these three values as IDs as well. */
+.chat-wrap { background-color:white; padding:0px; margin-bottom:10px; }
+.chat-header { border:solid 1px #c0c0c0; padding:4px; font-weight:bold; color:#475055 !important; }
+.chat-inner { border-left:solid 1px #c0c0c0; max-height:250px; overflow-y:auto; }
 
-.chat-slot { width:100%; border-bottom: solid 1px #1F6F6D; }
-.chat-slot:hover { background-color:#7BD3D1; }
-.chat-entry { position:relative; color:#1f6f6d !important; font-size:14px; line-height:14px; }
-
+.chat-line { width:100%; font-size:0.9em; }
 .chat-lside { display:table-cell; vertical-align:top; padding:2px 2px 0px 2px; }
-.chat-rside { display:table-cell; vertical-align:top; padding:2px 2px 2px 4px; }
+.chat-rside { display:table-cell; vertical-align:middle; padding:0px 2px 2px 4px; }
 .chat-lside>img { height:32px; }
 
 .chat-footer {  }
 .chat-footer input { width:100%; box-sizing:border-box; padding:3px; }
+
 
 /**********************
 ****** Modal CSS ******
