--- a/css/unifaction-base.css
+++ b/css/unifaction-base.css
@@ -680,3 +680,9 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 @media screen and (max-width:800px) { .hide-800 {display:none;} }
 @media screen and (max-width:600px) { .hide-600 {display:none;} }
 @media screen and (max-width:400px) { .hide-400 {display:none;} }
+
+@media screen and (min-width:1200px) { .show-1200 {display:none;} }
+@media screen and (min-width:1000px) { .show-1000 {display:none;} }
+@media screen and (min-width:800px) { .show-800 {display:none;} }
+@media screen and (min-width:600px) { .show-600 {display:none;} }
+@media screen and (min-width:400px) { .show-400 {display:none;} }
