--- a/css/unifaction-base-orig.css
+++ b/css/unifaction-base-orig.css
@@ -236,10 +236,8 @@ img.circimg-large { border-radius:50%; width:128px; height:128px; }
 	z-index:100;
 	width:100%;
 	height:60px;
-	background-color:#D9E8F7;
-	box-shadow: 0 0 0 1px #a9b8c7, 0 0 0 1px #c9d8e7;
-	background-image: url("http://cdn.unifaction.com/images/top-logo.png");
-	background-repeat: repeat-x;
+	background-color:white;
+	box-shadow: 0 0 0 2px #c8c8c8, 0 0 0 2px #dddddd;
 	/* overflow:hidden; /* Removed due to preventing overlaps. */
 }
 
