--- a/css/forum.css
+++ b/css/forum.css
@@ -3,6 +3,7 @@
 ****** Page Layout ******
 ************************/
 
+/*
 #core-nav { background-color:#77b5db; }
 #core-nav a, #core-nav span { color:#2c7099 !important; }
 #core-nav a:hover { background-color:#97d5fb; }
@@ -10,6 +11,8 @@
 .core-link { border-bottom:solid 1px #2C7099; }
 
 #container { background-color:#d9e8f7; }
+*/
+
 #content a { color: #686868; }
 #content a:visited { color: #686868; }
 
