--- a/css/unifaction-2col.css
+++ b/css/unifaction-2col.css
@@ -4,11 +4,11 @@
 ************************/
 
 @media screen and (min-width:1151px) {
-	#content { margin-left:0px; max-width:100%; margin-right:260px; }
+	#content { margin-left:6px; max-width:100%; margin-right:260px; }
 }
 
 @media screen and (min-width:501px) and (max-width:1150px) {
-	#content { margin-left:0px; margin-right:7px; }
+	#content { margin-left:6px; margin-right:7px; }
 }
 
 @media screen and (max-width:500px) {
@@ -17,7 +17,7 @@
 
 #panel { float:left; width:0px; }
 #panel-left { display:none; width:245px; }
-#viewport-wrap { max-width:1420px; position:relative; padding:0; }
+#viewport-wrap { max-width:1450px; margin:0 auto 0 auto; position:relative; padding:0; }
 
 /*******************************************
 ****** Responsive (1151px and higher) ******
