--- a/css/unifaction-3col.css
+++ b/css/unifaction-3col.css
@@ -12,7 +12,7 @@
 }
 
 @media screen and (min-width:501px) and (max-width:1120px) {
-	#content { margin-left:0px; margin-right:7px; }
+	#content { margin-left:6px; margin-right:7px; }
 }
 
 @media screen and (max-width:500px) {
@@ -20,7 +20,7 @@
 }
 
 #panel-left { width:245px; }
-#viewport-wrap { max-width:1420px; position:relative; padding:0; }
+#viewport-wrap { max-width:1450px; margin:0 auto 0 auto; position:relative; padding:0; }
 
 /***********************************************************
 ****** Responsive - Large Desktop (Minimum of 1521px) ******
