--- a/css/unifaction-3col.css
+++ b/css/unifaction-3col.css
@@ -4,11 +4,11 @@
 ************************/
 
 @media screen and (min-width:1401px) {
-	#content { margin-left:255px; max-width:100%; margin-right:260px; }
+	#content { margin-left:261px; max-width:100%; margin-right:260px; }
 }
 
 @media screen and (min-width:1121px) and (max-width:1400px) {
-	#content { margin-left:255px; margin-right:7px; }
+	#content { margin-left:261px; margin-right:7px; }
 }
 
 @media screen and (min-width:501px) and (max-width:1120px) {
@@ -27,7 +27,7 @@
 ************************************************************/ @media screen and (min-width:1521px) {
 
 /* Side Panel */
-#panel { float:left; margin-left:0px; }
+#panel { float:left; margin-left:6px; }
 #panel-core { float:left; width:155px; position:relative; }
 #panel-right { position:absolute; right:7px; }
 #panel-right-inner { padding:10px; margin-right:10px; max-width:100%; }
@@ -38,7 +38,7 @@
 ****************************************************/ @media screen and (min-width:1401px) and (max-width:1520px) {
 
 /* Side Panel */
-#panel { float:left; }
+#panel { float:left; margin-left:6px; }
 #panel-core { float:left; width:55px; position:relative; }
 #panel-right { position:absolute; right:7px; }
 #panel-right-inner { padding:10px; margin-right:10px; max-width:100%; }
@@ -49,7 +49,7 @@
 ***************************************************/ @media screen and (min-width:1121px) and (max-width:1400px) {
 
 /* Side Panel */
-#panel { float:left; }
+#panel { float:left; margin-left:6px; }
 #panel-core { float:left; width:55px; position:relative; }
 #panel-right { display:none; }
 
@@ -59,8 +59,8 @@
 *************************************************/ @media screen and (min-width:501px) and (max-width:1120px) {
 
 /* Side Panel */
-#panel { float:left; width:55px; }
-#panel-core { position:relative; }
+#panel { float:left; width:55px; margin-left:6px; }
+#panel-core { }
 #panel-left { display:none; }
 #panel-right { display:none; }
 
