--- a/css/unifaction-3col.css
+++ b/css/unifaction-3col.css
@@ -19,7 +19,7 @@
 	#content { margin-left:0px; }
 }
 
-#panel-left { width:245px; }
+#panel-left { width:245px; padding-bottom:60px; }
 #viewport-wrap { max-width:1450px; margin:0 auto 0 auto; position:relative; padding:0; }
 
 /***********************************************************
